<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurfaceContainer">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_small"
        android:background="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_artist"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:background="?attr/colorControlNormal"
        android:contentDescription="@string/content_description_artist"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top" />

    <View
        android:id="@+id/view_middle"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/artist_name"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_middle"
        app:layout_constraintTop_toBottomOf="@+id/view_top" />

    <TextView
        android:id="@+id/text_view_artist_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_small"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/artist_style"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_middle"
        app:layout_constraintTop_toBottomOf="@+id/text_view_artist_name" />

    <ImageView
        android:id="@+id/image_view_close_arrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:scaleType="fitEnd"
        android:contentDescription="@string/content_description_close"
        app:tint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />

    <ImageView
        android:id="@+id/image_view_open_arrow"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:scaleType="fitEnd"
        android:contentDescription="@string/content_description_open"
        android:visibility="gone"
        app:tint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_up_24" />

</androidx.constraintlayout.widget.ConstraintLayout>