<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSurfaceDim">

    <View
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_small"
        android:background="?attr/colorControlNormal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_album"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin_standard"
        android:background="?attr/colorControlNormal"
        android:contentDescription="@string/content_description_album"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top" />

    <TextView
        android:id="@+id/text_view_song_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/song_name"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintBottom_toTopOf="@+id/text_view_album_name"
        app:layout_constraintStart_toEndOf="@+id/image_view_album"
        app:layout_constraintEnd_toStartOf="@+id/image_view_player"
        app:layout_constraintTop_toBottomOf="@+id/view_top"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_view_album_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/album_name"
        android:textAppearance="?attr/textAppearanceBodySmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_album"
        app:layout_constraintEnd_toStartOf="@+id/image_view_player"
        app:layout_constraintTop_toBottomOf="@+id/text_view_song_name" />

    <ImageView
        android:id="@+id/image_view_player"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="@dimen/margin_standard"
        android:contentDescription="@string/content_description_play"
        app:tint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top"
        app:srcCompat="@drawable/baseline_play_circle_outline_64" />

</androidx.constraintlayout.widget.ConstraintLayout>